[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-combine"
version = "0.1.0"
description = "Local-first markdown LLM Wiki combination draft generator."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wiki-combine = "wiki_combine:main"

[tool.setuptools]
py-modules = [
  "combination_doctor",
  "combination_game",
  "combination_providers",
  "combination_service",
  "combination_tools",
  "combination_web",
  "cursor_combine_provider",
  "pair_scorer",
  "semantic_gate",
  "wiki_combine",
]
